POC fix bug click MovieCard on mobile

--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -2,7 +2,6 @@
 
 .MovieCard {
   color: white;
-  cursor: pointer;
   height: 100%;
   padding: 4px;
   position: relative;
