--- a/src/components/MovieDetailsBanner/MovieDetailsBanner.scss
+++ b/src/components/MovieDetailsBanner/MovieDetailsBanner.scss
@@ -12,6 +12,7 @@
 }
 
 .movieImg {
+  border-radius: 5px;
   height: 100%;
   position: absolute;
   right: 0;
